syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GetRouteRequestOuter";

import "google/protobuf/timestamp.proto";
import "PositionLog.proto";

package com.bistros.hauto.apiv1;

message GetRouteRequestProto {
    string id =1;
    google.protobuf.Timestamp startTime = 2;
    google.protobuf.Timestamp endTime = 3;

    google.protobuf.Timestamp eventTime = 10;
}


message GetRouteResponseProto {
    string id = 1;

    repeated com.bistros.hauto.apiv1.PositionLogProto position = 2;
}
